made Char.js work

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                         data: retirementBalances,
                         borderColor: 'rgba(75, 192, 192, 1)',
                         backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        fill: true,
+                        fill: false,
                         tension: 0.4
                     }]
                 },
